- changed depends from R(>= 3.5.0) to R(>= 4.0.0). As detected by GitHub user
  PaulCristina, functions pairwise.ext.t.test and pairwise.wilcox.exact make
  use of function deparse1, which was added in R 4.0.0.
- now uses deparse1 instead of deparse also in hsu.t.test, perm.t.test, 
  boot.t.test and rm.oneway.test.
- corrected a minor bug regarding data names in rm.oneway.test.


###########################################################
## Version 0.9
###########################################################
- corrected bug in pairwise.wilcox.exact and pairwise.ext.t.test.


###########################################################
## Version 0.8
###########################################################
- simplified computation of quantileCI for method exact according to 
  Section 6.10.2 of Hedderich and Sachs (2020)
- enabled parallel computing for bootstrap confidence intervals
- added pairwise.wilcox.exact and pairwise.ext.t.test


###########################################################
## Version 0.7
###########################################################
- introduced na.rm to volcano
- introduced new parameter corr to imputeSD
- changed http to https
- added some example code for using mice together with mi.t.test to vignette
- added function p2ses for computing a standardized effect size (SES) for 
  permutation tests.


###########################################################
## Version 0.6
###########################################################
- removed an unnecessary print in function binomDiffCI
- use lgamma instead of gamma to compute variance of SD (inside normCI)
- modified imputeSD such that correlations < -1 or > 1, which may occur, are 
  not used for the imputations, but are set to -1 or 1, respectively.


###########################################################
## Version 0.5
###########################################################
- corrected bug in wilson method in binomDiffCI (alpha was not passed through)